# niuker

./: .gitignore  README.rst  requirements.txt  setup.cfg  setup.py  todo
example/: k8s_img.txt
niuker/: cli.py  config.py  utils.py
niuker/commands/: __init__.py  cmd_clean.py  cmd_doc.py  cmd_k8s_img_sync.py  cmd_machine_pull.py  cmd_machine_sync.py  cmd_pull.py  cmd_push.py
tools/: alauda-rc.sh  get_official_images.sh  get_rancher_images.sh  linux-shdowsocks-global.sh  neunn-rc.sh  tenxcloud-rc.sh
