[metadata]
name = niuker
summary = Docker & Rancher assistant tools
description-file =
    README.rst
author = niusmallnan
author-email = zhangzb@neunn.com
classifier =
    Environment :: Neunn
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[pbr]
warnerrors = True
autodoc_tree_index_modules = True

[files]
packages =
   niuker

[entry_points]
console_scripts =
    niuker = niuker.cli:cli
